--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap');
 :root {
-
-  --body-color: rgb(245, 245, 245);
+  
   --body-color: rgb(1, 1, 1);
 }
 
-
+.dark-mode {
+  
+  --body-color: rgb(245, 245, 245);
+}
 
 .header {
   display: flex;
